# img-ly-assignment

./: CMakeLists.txt  README.md
src/: compute_pipeline.cpp  compute_pipeline.h  decode_image_stage.cpp  decode_image_stage.h  decompress_data_stage.cpp  decompress_data_stage.h  main.cpp  parse_json_stage.cpp  parse_json_stage.h  pipeline_stage.cpp  pipeline_stage.h
